# easydict_ctk

./: easydict_ctk.py  easydict_ctk_widgets.py  pyproject.toml  test.py
backends/: backend.py  sqlite_backend.py
